--- a/Habil_Altinel_9Sinif_4Odev.ipynb
+++ b/Habil_Altinel_9Sinif_4Odev.ipynb
@@ -317,16 +317,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EvbmvSfdEuCi",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "f3hMufYVguPz",
         "colab_type": "text"
       },
@@ -406,14 +396,55 @@
       "metadata": {
         "id": "O4OKVr1VnH_D",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ec49b7da-1c91-4aca-a081-7381c243eea7"
       },
       "source": [
-        "def multiples(n):\n",
-        "  # Burayı doldur. \n"
+        "def myfunction(n):\n",
+        "  toplam=0\n",
+        "  for i in range(n):\n",
+        "    if i%5==0 or i%3==0:\n",
+        "      toplam += i\n",
+        "  print(toplam)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "233168\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GfuIYWqjhGgd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "41e25bec-04f0-4239-9aef-947afde25371"
+      },
+      "source": [
+        "myfunction(1000)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "233168\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -475,89 +506,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O6hJeNTVBsW_",
-        "colab_type": "code",
-        "outputId": "cad671e5-f7f5-4878-efc5-4643116c705f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "Fibonacci_term(3)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "bEN6gf34Bueg",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def Fibonacci_evenSum(nlast):\n",
-        "  # burayı doldur. nlast burada 4,000,000 olarak deneyeceksin. "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Hth_Ul5DD2aF",
-        "colab_type": "code",
-        "outputId": "ece42aa5-55bf-474f-b970-f2c77ed550a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+          "height": 34
+        },
+        "outputId": "85333639-8f81-4ac7-e942-25f244f6d337"
       },
       "source": [
-        "Fibonacci_evenSum(10)"
+        "def Fibonacci(n):\n",
+        "  s1=1\n",
+        "  s2=1\n",
+        "  toplam=0\n",
+        "  while s1 or s2 <= n:\n",
+        "    if s1%2==0:\n",
+        "      toplam+=s1\n",
+        "    if s2%2==0:\n",
+        "      toplam+=s2\n",
+        "    s1+=s2\n",
+        "    if s1>n:\n",
+        "      if s2<=n:\n",
+        "        if s2%2==0:\n",
+        "          toplam+=s2\n",
+        "      break\n",
+        "    s2+=s1\n",
+        "    if s2>n:\n",
+        "      if s1<=n:\n",
+        "        if s1%2==0:\n",
+        "          toplam+=s1\n",
+        "      break\n",
+        "  print(toplam)\n",
+        "Fibonacci(4000000)\n",
+        "\n",
+        "  \n",
+        "   "
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "44"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 79
+          "output_type": "stream",
+          "text": [
+            "4613732\n"
+          ],
+          "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "egylnYn0EA_C",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
