--- a/Habil_Altinel_9Sinif_4Odev.ipynb
+++ b/Habil_Altinel_9Sinif_4Odev.ipynb
@@ -515,28 +515,28 @@
         "outputId": "85333639-8f81-4ac7-e942-25f244f6d337"
       },
       "source": [
-        "def Fibonacci(n):\n",
-        "  s1=1\n",
-        "  s2=1\n",
-        "  toplam=0\n",
-        "  while s1 or s2 <= n:\n",
-        "    if s1%2==0:\n",
-        "      toplam+=s1\n",
-        "    if s2%2==0:\n",
-        "      toplam+=s2\n",
-        "    s1+=s2\n",
-        "    if s1>n:\n",
-        "      if s2<=n:\n",
-        "        if s2%2==0:\n",
-        "          toplam+=s2\n",
-        "      break\n",
-        "    s2+=s1\n",
-        "    if s2>n:\n",
-        "      if s1<=n:\n",
-        "        if s1%2==0:\n",
-        "          toplam+=s1\n",
-        "      break\n",
-        "  print(toplam)\n",
+        "def Fibonacci(n):   #kendi fonksiyonumuzu kuruyoruz.\n",
+        "  s1=1       #1,3,5,7,9,11. diye giden sayı değerlerini bununla tanımlayacağız. \n",
+        "  s2=1       #2,4,6,8,10,12. diye giden sayı değerlerini bununla tanımlayacağız.\n",
+        "  toplam=0                #çıkan çift sayıların toplamını buraya kaydedeceğiz.\n",
+        "  while s1 or s2 <= n:  #koyduğumuz şarta bağlı olarak içindekileri tekrarlıyor.\n",
+        "    if s1%2==0:               #bununla sayının çift olup olmadığına bakıyoruz.\n",
+        "      toplam+=s1               #çift sayıysa toplama ekliyoruz.\n",
+        "    if s2%2==0:               #bununla sayının çift olup olmadığına bakıyoruz.\n",
+        "      toplam+=s2               #çift sayıysa toplama ekliyoruz.\n",
+        "    s1+=s2                 #sonraki değer için ondan önceki iki sayıyı topluyor. \n",
+        "    if s1>n:               #eğer s1, n'den büyükse devreye girer.\n",
+        "      if s2<=n:              #s2 n'den büyük olmayabilir. \n",
+        "        if s2%2==0:           #s2'nin son değeri çift sayı olabilir.\n",
+        "          toplam+=s2           #çiftse toplama eklenir.\n",
+        "      break                  #eğer s1 ve s2 n'den büyük ise fonksiyonu durdurur.\n",
+        "    s2+=s1                 #sonraki değer için ondan önceki iki sayıyı topluyor.\n",
+        "    if s2>n:               #eğer s2, n'den büyükse devreye girer.\n",
+        "      if s1<=n:             #s1 n'den büyük olmayabilir.\n",
+        "        if s1%2==0:          #s1'in son değeri çift olabilir.\n",
+        "          toplam+=s1          #çiftse toplama eklenir.\n",
+        "      break                  #eğer s1 ve s2 n'den büyük ise fonksiyonu durdurur. \n",
+        "  print(toplam)           #çıkan çift sayıların toplamını verir.\n",
         "Fibonacci(4000000)\n",
         "\n",
         "  \n",
